--- a/02-react-create-element.html
+++ b/02-react-create-element.html
@@ -5,9 +5,10 @@
   <script type="text/javascript">
     const rootElement = document.getElementById('root')
     const element = React.createElement('div', {
-      className: 'container',
-      children: 'Hello World',
+      children: React.createElement('h1', null,'Hello World' ),
+      className: 'container' 
     })
+    console.log(element)
     ReactDOM.render(element, rootElement)
   </script>
 </body>
