--- a/03-jsx.html
+++ b/03-jsx.html
@@ -3,6 +3,7 @@
   <script src="https://unpkg.com/react@16.12.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@16.12.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
+  //compiling JSX to JavaScript. HTML like syntax that compile to JavaScript
   <script type="text/babel">
     const rootElement = document.getElementById('root')
     const element = <div className="container">Hello World</div>
