--- a/05-fragments.html
+++ b/05-fragments.html
@@ -5,6 +5,7 @@
   <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
   <script type="text/babel">
     const element = (
+      //react fragment <></> is used to return multiple elements
       <>
         <span>Hello</span> <span>World</span>
       </>
